[package]
name = "latency-origin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
listenfd = "1.0.1"
tokio = { version = "1.36.0", features = ["macros", "rt", "net", "time"] }
tokio-native-tls = "0.3.1"
